#/********************************************************************
# wabash/pyproject.toml
#
# Copyright (c) 2025  Stephen Rhodes
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
#*********************************************************************/

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "wabash"
version = "0.0.2"
description = "Example pybind11 extension for multi-threading and data transfer"
authors = [{ name = "Stephen Rhodes", email="sr99622@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
liceense="Apache"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/sr99622/wabash"
Issues = "https://github.com/sr99622/wabash/issues"

dependencies = [
  'numpy', 'PyQt6-Qt6', 'pyqt6', 'loguru', 'requests', 'psutil', 'pyqtgraph', 'torch==2.8.0', 'torchvision==0.23.0', 'openvino==2025.3.0'
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true

[project.gui-scripts]
wabash = "wabash.gui.main:run"
